0.1
---
 * fm
   * Optional repeated events suppression

0.1RC2 (29-JAN-2008)
--------------------
 * general
   * site_settings.py replaced with etc/noc.ini configuration file
   * daemons reload config on SIGHUP
 * main
   * main.backup periodic back ups repo too
   * New reports: main.system report, main.backups report
   * New periodicts: main.cleanup_sessions
 * peer
   * Maintainer object
 * sa
   * New service activation framework with scripting support
   * script interfaces
   * generic scripts
   * gzip message compression between SAE and activators
   * Activator tries to reconnect to SAE on connection lost
   * Activator digest authentication
   * manage.py debug-profile replaced with manage.py debug-script
 * cm
   * Configuration management uses service activation now
   * New reports: cm.stale_configs
 * fm
   * Initial Fault Management implementation
   * noc-classifier daemon
   * SNMP Trap and Syslog collector
   * MIB compilation and uploading
 * ip
   * 

0.1RC1 (19-DEC-2008)
--------------------
 * First open-source publication